tests/invalid/control_flow/redundant_condition.php
<?php

$value = 10;

if ($value > 5) {
    echo "first branch";
}

if ($value > 5) {
    echo "redundant branch";
}

